--- a/src/Component/Home.css
+++ b/src/Component/Home.css
@@ -185,6 +185,11 @@ h1 {
   background-color: white; /* Added white background */
 }
 
+.heading-procedures h1 {
+  display: flex;
+  justify-content: center;
+}
+
 /* Responsive styles */
 @media (max-width: 768px) {
   h1 {
